# lifx-cli

./: .envrc  Cargo.toml  README.md  makefile
src/: lib.rs  main.rs
src/lifx/: cli_printables.rs  commands.rs  lan.rs  lan_service.rs  mod.rs  types.rs
