[package]
name = "lifx-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = "1.0.142"
serde_derive = "1.0.142"
serde_json = "1.0.83"
log = "0.4.17"
env_logger = "0.9.0"
optional-field = "0.1.2"
prettytable-rs = "0.8.0"
ansi_rgb = "0.2.0"
rgb = "0.8.33"
hsl = "0.1.1"
clap = { version = "3.2.16", features = ["derive", "cargo"] }
system-config = "0.1.2"
tokio = { version = "1.20.1", features = ["full"] }
urlencoding = "2.1.0"
bincode = "1.3.3"
mac_address = "1.1.3"

[[bin]]
name = "lifx"
path = "src/main.rs"